Fix gallery max-height on small screens

--- a/theme_153957/static/css/style.css
+++ b/theme_153957/static/css/style.css
@@ -213,6 +213,7 @@ body {
       'menu'
       'thumbnails'
       'canvas';
+    max-height: initial;
   }
 
   #menu {
